# solidity

./: .gitignore  Bank.sol  CMakeLists.txt
solv/: CMakeLists.txt  CommandLineInterface.cpp  CommandLineInterface.h  solv.cpp
solv/task/: IReportItem.h  ITask.h  ImmutabilityCheckTask.cpp  ImmutabilityCheckTask.h  ImmutabilityCheckTaskLocator.cpp  TaskAnnotation.h  TaskFactory.cpp  TaskFactory.h  TaskFinder.cpp  TaskFinder.h  TaskLocator.h
solv/task/FixedAfterInitCheck/: FixedAfterInitASTTraverser.cpp  FixedAfterInitASTTraverser.h  FixedAfterInitCheckTask.cpp  FixedAfterInitCheckTask.h  FixedAfterInitCheckTaskLocator.cpp  FixedAfterInitCheckTaskLocator.h  FixedAfterInitReportItem.cpp  FixedAfterInitReportItem.h
solv/task/ImmutabilityCheck/: ImmutabilityASTTraverser.cpp  ImmutabilityASTTraverser.h  ImmutabilityCheckTask.cpp  ImmutabilityCheckTask.h  ImmutabilityCheckTaskLocator.cpp  ImmutabilityCheckTaskLocator.h
test/: CMakeLists.txt
test/solv/: TaskFactory.cpp  TaskFinder.cpp
test/solv/tasks/: FixedAfterInitCheckTask.cpp
test/tools/yulInterpreter/: Interpreter.h
